about.html complete

--- a/w3/index.html
+++ b/w3/index.html
@@ -29,7 +29,7 @@
                     <a href="#body3">The Bigger Picture: Philosophical Influence Beyond Gaming</a>
                 </li>
                 <li>
-                    <a href="#conclusion">Closing Thought</a>
+                    <a href="#conclusion">Closing Thoughts</a>
                 </li>
             </ul>
         </nav>
@@ -106,6 +106,15 @@
             <p>If we can find timeless wisdom in ancient texts, how might we use those lessons to improve not only our games but our lives?</p>
         </article>
     </main>
+    <hr>
+    <footer>
+        <p>
+            &lt;&lt;&lt; &copy; <a href="about.html">Octavio Rodriguez</a> &gt;&gt;&gt;
+        </p>
+        <p>
+            <a href="#">Back to Top</a>
+        </p>
+    </footer>
 </body>
 
 </html>
