images created and placed on pages

--- a/w3/about.html
+++ b/w3/about.html
@@ -47,6 +47,10 @@
                     <p>Cats! and also Dogs :)</p>
                 </li>
             </ul>
+            <section>
+                <h4>It's me doing the things I love at once :D</h4>
+                <img src="../img/About.jpg" alt="AI me doing some fun stuff" title="Things I love doing" width="600" height="600">
+            </section>
         </article>
         <hr>
 
