--- a/w3/index.html
+++ b/w3/index.html
@@ -42,6 +42,10 @@
             <p>Ancient philosophies like Stoicism, Confucianism and Sun Tzu's Art of War have survived through time, shaping various aspects of life, including modern technology and gaming.</p>
             <p>These ancient ideas, though thousands of years old, continue to impact modern gaming culture, especially in how players approach strategy, competition, and self-control in digital spaces.</p>
         </article>
+        <section>
+            <h4>Ancient Philosophies</h4>
+            <img src="../img/Philosphies.jpg" alt="philospher overlooking metropolis" title="Ancient Philosophies" width="300" height="300">
+        </section>
         <hr>
 
         <article id="body1">
@@ -86,6 +90,10 @@
                 </li>
             </ul>
         </article>
+        <section>
+            <h4>From History to Gaming</h4>
+            <img src="../img/Philosopher-Gaming.jpg" alt="philospher gaming" title="from history to gaming" width="300" height="300">
+        </section>
         <hr>
 
         <article id="body3">
