fixed figure, figcaption for images and also fixed the back home link

--- a/w3/about.html
+++ b/w3/about.html
@@ -48,8 +48,14 @@
                 </li>
             </ul>
             <section>
-                <h4>It's me doing the things I love at once :D</h4>
-                <img src="../img/About.jpg" alt="AI me doing some fun stuff" title="Things I love doing" width="600" height="600">
+                <figure>
+                    <h4>AI me doing things that I enjoy :D</h4>
+                    <img src="../img/About.jpg" alt="AI me doing some fun stuff" title="Things I love doing" width="600"
+                        height="600">
+                    <figcaption>
+                        AI me doing things that I enjoy
+                    </figcaption>
+                </figure>
             </section>
         </article>
         <hr>
@@ -81,7 +87,7 @@
     </ul>
     &lt;&lt;&lt; &copy; <a href="about.html">Octavio Rodriguez</a> &gt;&gt;&gt;
     <p>
-        <a href="/">Back to Home</a>
+        <a href="/octavior-pub/w3/index.html">Back to Home</a>
     </p>
 </body>
 
