--- a/w3/index.html
+++ b/w3/index.html
@@ -44,7 +44,13 @@
         </article>
         <section>
             <h4>Ancient Philosophies</h4>
-            <img src="../img/Philosphies.jpg" alt="philospher overlooking metropolis" title="Ancient Philosophies" width="300" height="300">
+            <figure>
+                <img src="../img/Philosphies.jpg" alt="Philospher overlooking metropolis" title="Ancient Philosophies"
+                    width="300" height="300">
+                <figcaption>
+                    Philospher overlooking metropolis
+                </figcaption>
+            </figure>
         </section>
         <hr>
 
@@ -92,7 +98,13 @@
         </article>
         <section>
             <h4>From History to Gaming</h4>
-            <img src="../img/Philosopher-Gaming.jpg" alt="philospher gaming" title="from history to gaming" width="300" height="300">
+            <figure>
+            <img src="../img/Philosopher-Gaming.jpg" alt="philospher gaming" title="from history to gaming" width="300"
+                height="300">
+                <figcaption>
+                    Philospher Gaming
+                </figcaption>
+            </figure>
         </section>
         <hr>
 
