--- a/w4/index.html
+++ b/w4/index.html
@@ -82,6 +82,43 @@
                         players need to outsmart opponents through tactical moves and psychological play.</p>
                 </li>
             </ul>
+            <br>
+            <table>
+                <caption>3 Philosophies used by everyday gamers</caption>
+                <thead>
+                    <tr>
+                        <th>Gaming Genre</th>
+                        <th scope="col">Most used Phylosophy</th>
+                        <th scope="col">Second most used Phylosophy</th>
+                        <th scope="col">Least used Phylosophy</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">Action</th>
+                        <td>The Art of War</td>
+                        <td>Stoicism</td>
+                        <td>Confucianism</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Adventure</th>
+                        <td>Stoicism</td>
+                        <td>The Art of War</td>
+                        <td>Confucianism</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">RPG</th>
+                        <td>Stoicism</td>
+                        <td>The Art of War</td>
+                        <td>Confucianism</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="4">It's interesting to see how these 3 examples of philosophies are most and least used by everyday gamers of different genres!</td>
+                    </tr>
+                </tfoot>
+            </table>
         </article>
         <hr>
 
@@ -113,12 +150,49 @@
                         keeping a level head despite the intensity of the game.</p>
                 </li>
             </ul>
+            <br>
+            <table>
+                <caption>Three recent popular games of the genres: Action, Adventure, RPG and how related they are to the three philosophies</caption>
+                <thead>
+                    <tr>
+                        <th>Game</th>
+                        <th scope="col">Most Related Philosophy</th>
+                        <th scope="col">Second Most Related Philosophy</th>
+                        <th scope="col">Least Related Philosophy</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">Call of Duty: Modern Warfare II</th>
+                        <td>The Art of War</td>
+                        <td>Stoicism</td>
+                        <td>Confucianism</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">The Legend of Zelda: Breath of the Wild</th>
+                        <td>Stoicism</td>
+                        <td>Confucianism</td>
+                        <td>The Art of War</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">The Witcher 3: Wild Hunt</th>
+                        <td>Stoicism</td>
+                        <td>The Art of War</td>
+                        <td>Confucianism</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="4">With the help of ChatGPT, I was able to identify three recent popular games from the three most popular genres and analyze how they relate to each of the three philosophies I used as examples.</td>
+                    </tr>
+                </tfoot>
+            </table>
         </article>
         <section>
             <h4>From History to Gaming</h4>
             <figure>
-            <img src="../img/Philosopher-Gaming.jpg" alt="philospher gaming" title="from history to gaming" width="300"
-                height="300">
+                <img src="../img/Philosopher-Gaming.jpg" alt="philospher gaming" title="from history to gaming"
+                    width="300" height="300">
                 <figcaption>
                     Philospher Gaming
                 </figcaption>
@@ -153,7 +227,7 @@
         </article>
     </main>
     <hr>
-    <footer>
+    <footer class="footer">
         <p>
             &lt;&lt;&lt; &copy; <a href="about.html">Octavio Rodriguez</a> &gt;&gt;&gt;
         </p>
