color palette, css styling and box model

--- a/w4/index.html
+++ b/w4/index.html
@@ -8,7 +8,7 @@
         content="This page contains a brief description of The Impact of Ancient Philosophies on Modern Tech and Gaming Culture">
     <title>Week 4 css group work</title>
     <link rel="icon" href="../img/ancientp.png" type="image/x-icon">
-    <link rel="stylesheet" href="main.css" type="text/css">
+    <link rel="stylesheet" href="../w4/css/main.css" type="text/css">
 </head>
 
 <body>
@@ -16,6 +16,7 @@
         <h1>The Impact of Ancient Philosophies on Modern Tech and Gaming Culture</h1>
 
         <nav aria-label="primary-navigation">
+            <h2>Website Navigation</h2>
             <ul>
                 <li>
                     <a href="#introduction">Introduction</a>
@@ -229,7 +230,10 @@
     <hr>
     <footer class="footer">
         <p>
-            &lt;&lt;&lt; &copy; <a href="about.html">Octavio Rodriguez</a> &gt;&gt;&gt;
+            &copy; <a href="about.html">Octavio Rodriguez</a>
+        </p>
+        <p>
+            <a href="/octavior-pub/w4/sitemap.html">Sitemap</a>
         </p>
         <p>
             <a href="#">Back to Top</a>
