--- a/w4/about.html
+++ b/w4/about.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Hi, I am Octavio Rodriguez. This page is a little bit about myself.">
     <title>About me</title>
     <link rel="icon" href="../img/About.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="main.css" type="text/css">
+    <link rel="stylesheet" href="../w4/css/main.css" type="text/css">
 </head>
 
 <body>
@@ -17,6 +17,7 @@
         <h2>About Me</h2>
 
         <nav aria-label="primary-navigation">
+            <h4>Website Navigation</h4>
             <ul>
                 <li>
                     <a href="#thingsILove">Some things I love!</a>
@@ -48,8 +49,8 @@
                 </li>
             </ul>
             <section>
+                <h4>AI me doing things that I enjoy :D</h4>
                 <figure>
-                    <h4>AI me doing things that I enjoy :D</h4>
                     <img src="../img/About.jpg" alt="AI me doing some fun stuff" title="Things I love doing" width="600"
                         height="600">
                     <figcaption>
@@ -83,18 +84,20 @@
             <form action="https://httpbin.org/get" method="get">
                 <fieldset>
                     <legend>Personal Info</legend>
-                <p>
-                <label for="firstName">First Name:</label>
-                <input type="text" name="firstName" id="firstName" placeholder="John" autocomplete="on" required autofocus>
-                </p>
-                <p>
-                <label for="lastName">Last Name:</label>
-                <input type="text" name="lastName" id="lastName" placeholder="Snow" autocomplete="on" required>
-                </p>
-                <p>
-                <label for="phone">Phone:</label>
-                <input type="tel" name="phone" id="phone" placeholder="5595554444" pattern="[0-9]{3}[0-9]{3}[0-9]{4}" required>
-                </p>
+                    <p>
+                        <label for="firstName">First Name:</label>
+                        <input type="text" name="firstName" id="firstName" placeholder="John" autocomplete="on" required
+                            autofocus>
+                    </p>
+                    <p>
+                        <label for="lastName">Last Name:</label>
+                        <input type="text" name="lastName" id="lastName" placeholder="Snow" autocomplete="on" required>
+                    </p>
+                    <p>
+                        <label for="phone">Phone:</label>
+                        <input type="tel" name="phone" id="phone" placeholder="5595554444"
+                            pattern="[0-9]{3}[0-9]{3}[0-9]{4}" required>
+                    </p>
                     <p>
                         <label for="genre">Favorite Movie Genre:</label>
                         <select name="movie-genre" id="genre" multiple size="4">
@@ -165,7 +168,8 @@
                     <legend>Send Me A Note</legend>
                     <label for="message">Your Message:</label>
                     <br>
-                    <textarea name="message" id="message" cols="30" rows="10" placeholder="Type your message here"></textarea>
+                    <textarea name="message" id="message" cols="30" rows="10"
+                        placeholder="Type your message here"></textarea>
                 </fieldset>
                 <br>
                 <button type="submit">Submit</button>
@@ -173,34 +177,38 @@
                 <button type="reset">Reset</button>
             </form>
         </article>
-<hr>
+        <hr>
 
-<article>
-    <h2>Understanding the output from httpbin</h2>
-    <p>
-        The primary use of httpbins is to help developers inspect what data is being sent, and to test form submissions, headers, and other http request details.
-    </p>
-    <p>
-        If you submit the form, httpbin will respond by "echoing" back the form data that was sent in the request. The output you see will be a JSON response that shows the data that was sent in the request body.
-    </p>
-</article>
+        <article>
+            <h2>Understanding the output from httpbin</h2>
+            <p>
+                The primary use of httpbins is to help developers inspect what data is being sent, and to test form
+                submissions, headers, and other http request details.
+            </p>
+            <p>
+                If you submit the form, httpbin will respond by "echoing" back the form data that was sent in the
+                request. The output you see will be a JSON response that shows the data that was sent in the request
+                body.
+            </p>
+        </article>
     </main>
-<hr>
+    <hr>
 
-<footer class="footer">
-    &lt;&lt;&lt; &copy; <a href="about.html">Octavio Rodriguez</a> &gt;&gt;&gt;
-    <p>
-        <a href="/octavior-pub/w4/index.html">Back to Home</a>
-    </p>
-    <ul>
-        <li>
+    <footer class="footer">
+        &copy; <a href="about.html">Octavio Rodriguez</a>
+        <p>
+            <a href="/octavior-pub/w4/index.html">Back to Home</a>
+        </p>
+        <p>
+            <a href="/octavior-pub/w4/sitemap.html">Sitemap</a>
+        </p>
+        <p>
+            <a href="https://www.google.com/" target="_blank">Google</a>
+        </p>
+        <p>
             Download an <a href="../img/ancientp.png" download="">Ancient Phylosophy representation favicon</a>
-        </li>
-        <li>
-            Open <a href="https://www.google.com/" target="_blank">Google</a> in a new tab.
-        </li>
-    </ul>
-</footer>
+        </p>
+    </footer>
 </body>
 
 </html>
